--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,9 +70,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
-plugins {
-  
-  id 'com.google.gms.google-services'
+apply plugin:"com.google.gms.google-services"
 
-  
-}
