--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
+  firebase_database: ^10.0.13
+  firebase_core: ^2.6.1
+  firebase_auth: ^4.2.8
+  email_validator: ^2.1.17
+  top_snackbar_flutter: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +74,7 @@ flutter:
      - assets/images/chatBot_head.png
      - assets/images/chatBot_phone.png
      - assets/images/logoText.png
+     - assets/images/googleLogo.png
  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
