--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,14 @@ dependencies:
   google_fonts: ^4.0.3
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
-  firebase_database: ^10.0.13
+  firebase_database: ^10.0.14
   firebase_core: ^2.6.1
   firebase_auth: ^4.2.8
   email_validator: ^2.1.17
   top_snackbar_flutter: ^3.0.0+1
+  google_sign_in: ^6.0.1
+  curved_navigation_bar: ^1.0.3
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +57,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
