--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_sign_in: ^6.0.1
   curved_navigation_bar: ^1.0.3
   json_annotation: ^4.8.0
+  cloud_firestore: ^4.4.3
 
 dev_dependencies:
   flutter_test:
