--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   json_annotation: ^4.8.0
   cloud_firestore: ^4.4.3
   intl: ^0.17.0
+  image_picker: ^0.8.6+4
 
 dev_dependencies:
   flutter_test:
