--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   image_picker: ^0.8.6+4
   file_picker: ^5.2.5
   firebase_storage: ^11.0.14
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
