--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   file_picker: ^5.2.5
   firebase_storage: ^11.0.14
   uuid: ^3.0.7
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
