--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   lottie: ^2.3.1
   flutter_countdown_timer: ^4.1.0
   http: ^0.13.5
+  firebase_messaging: ^14.4.0
+  awesome_notifications: ^0.7.4+1
   
 
 dev_dependencies:
