--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ flutter:
      - assets/images/isWatching.png
      - assets/images/nullPhoto.jpeg
      - assets/images/videocall.json
+     - assets/images/wave.json
  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
