--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   http: ^0.13.5
   firebase_messaging: ^14.4.0
   awesome_notifications: ^0.7.4+1
+  flutter_launcher_icons: ^0.12.0
   
 
 dev_dependencies:
@@ -78,6 +79,10 @@ dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
   injectable_generator: ^2.1.4
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/launcher.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
