--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: '>=3.0.6 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.3
+  google_fonts: ^5.1.0
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   firebase_database: ^10.0.14
@@ -47,8 +47,8 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   json_annotation: ^4.8.0
   cloud_firestore: ^4.4.3
-  intl: ^0.17.0
-  image_picker: ^0.8.6+4
+  intl: ^0.18.1
+  image_picker: ^1.0.1
   file_picker: ^5.2.5
   firebase_storage: ^11.0.14
   uuid: ^3.0.7
@@ -60,10 +60,10 @@ dependencies:
   permission_handler: ^10.2.0
   lottie: ^2.3.1
   flutter_countdown_timer: ^4.1.0
-  http: ^0.13.5
+  http: ^1.1.0
   firebase_messaging: ^14.4.0
   awesome_notifications: ^0.7.4+1
-  flutter_launcher_icons: ^0.12.0
+  flutter_launcher_icons: ^0.13.1
   
 
 dev_dependencies:
@@ -97,6 +97,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - assets/images/
      - assets/images/Asset 1@4xxx 1.png
      - assets/images/doodle2.png
      - assets/images/chatBot_Hello.png
